[package]
name = "plcnext-device"
version = "0.1.0"
authors = ["Martin Boers <mboers@phoenixcontact.com>"]
edition = "2018"
build = "build/main.rs"

description = "Allows access to PLCnext Control system services"
documentation = "https://github.com/PLCnext/rust-sample-runtime"
homepage = "https://www.phoenixcontact.com"
repository = "https://github.com/martinboers/rust-plcnext"
readme = "README.md"

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["Industrial", "Automation", "PLC", "PLCnext", "Phoenix"]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = ["external-ffi-bindings", "science::robotics", "embedded"]

# This is an SPDX 2.1 license expression for this package.  Currently
# crates.io will validate the license provided against a whitelist of
# known license and exception identifiers from the SPDX license list
# 2.4.  Parentheses are not currently supported.
#
# Multiple licenses can be separated with a `/`, although that usage
# is deprecated.  Instead, use a license expression with AND and OR
# operators to get more explicit semantics.
license = "MIT"

# Files to exclude from the crate
exclude = [
    "target/",
    "**/*.rs.bk",
    "Cargo.lock"
]

# Optional specification of badges to be displayed on crates.io.
#
# - The badges pertaining to build status that are currently available are
#   Appveyor, CircleCI, GitLab, and TravisCI.
# - Available badges pertaining to code test coverage are Codecov and
#   Coveralls.
# - There are also maintenance-related badges based on isitmaintained.com
#   which state the issue resolution time, percent of open issues, and future
#   maintenance intentions.
#
# If a `repository` key is required, this refers to a repository in
# `user/repo` format.
#[badges]

# GitLab: `repository` is required. `branch` is optional; default is `master`
# gitlab = { repository = "...", branch = "master" }

# Maintenance: `status` is required. Available options are `actively-developed`,
# `passively-maintained`, `as-is`, `experimental`, `looking-for-maintainer`,
# `deprecated`, and the default `none`, which displays no badge on crates.io.
maintenance = { status = "experimental" }

[dependencies]
regex = "1.1.6"
lazy_static = "1.3.0"
cpp = "0.5"

[build-dependencies]
cpp_build = "0.5"
